tests/characterization/snapshots/characterization__env_name__single_digit.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: template 'nonexistent' is not implemented.
--- end ---
